AC_INIT(gd.c)
AC_CONFIG_AUX_DIR(../../config)

GDLIB_MAJOR=2
GDLIB_MINOR=0
GDLIB_REVISION=33
GDLIBNAME=gd

AC_SUBST(GDLIB_MAJOR)
AC_SUBST(GDLIB_MINOR)
AC_SUBST(GDLIB_REVISION)
AC_SUBST(GDLIBNAME)

AC_CONFIG_HEADERS(config.h:config.hin)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_HEADER_STDC
AC_CHECK_HEADERS([errno.h limits.h stddef.h stdlib.h string.h unistd.h])

sinclude(../../texk/kpathsea/withenable.ac)
sinclude(../zlib/withenable.ac)
sinclude(../zlib/zlib.ac)
sinclude(../libpng/withenable.ac)
sinclude(../libpng/libpng.ac)

KPSE_CONFIG_FILES([Makefile])
AC_OUTPUT
